--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,6 +15,10 @@ jobs:
           submodules: recursive
           lfs: true
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '2.7'
+
       - name: Build
         shell: cmd
         run: |
@@ -41,6 +45,10 @@ jobs:
           submodules: recursive
           lfs: true
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '2.7'
+
       - name: Build
         shell: cmd
         run: |
@@ -58,14 +66,18 @@ jobs:
           path: ./dist/
 
   build-linux-release:
-    name: Build windows debug
-    runs-on: windows-2019
+    name: Build linux release
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
           submodules: recursive
           lfs: true
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '2.7'
 
       - name: Build
         run: |
