--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-windows-release:
     name: Build windows release
-    runs-on: windows-2019
+    runs-on: windows-2016
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -18,6 +18,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '2.7'
+
+      - name: Install deps
+        run: choco install nasm
 
       - name: Build
         shell: cmd
@@ -37,7 +40,7 @@ jobs:
 
   build-windows-debug:
     name: Build windows debug
-    runs-on: windows-2019
+    runs-on: windows-2016
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -48,6 +51,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '2.7'
+
+      - name: Install deps
+        run: choco install nasm
 
       - name: Build
         shell: cmd
