--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -96,3 +96,75 @@ jobs:
         with:
           name: node-linux-release
           path: ./dist/
+
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-18.04
+    needs: 
+      - build-windows-release
+      - build-windows-debug
+      - build-linux-release
+    steps:
+      - name: Download windows release artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: node-windows-release
+          path: dist-windows-release
+
+      - name: Download windows debug artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: node-windows-debug
+          path: dist-windows-debug
+          
+      - name: Download linux release artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: node-linux-release
+          path: dist-linux-release
+      
+      - name: Zip artifacts
+        run: |
+          zip -r -j node-windows-release dist-windows-release
+          zip -r -j node-windows-debug dist-windows-debug
+          zip -r -j node-linux-release dist-linux-release
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+
+      - name: Upload windows release artifacts
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./node-windows-release.zip
+          asset_name: node-windows-release.zip
+          asset_content_type: application/zip
+
+      - name: Upload windows debug artifacts
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./node-windows-debug.zip
+          asset_name: node-windows-debug.zip
+          asset_content_type: application/zip
+
+      - name: Upload linux release artifacts
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./node-linux-release.zip
+          asset_name: node-linux-release.zip
+          asset_content_type: application/zip
+          
